Fail loud when JVM native access is denied; record closed-binary rationale